# rico.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: customer_info.rs  lib.rs  login.rs  summary.rs
